--- a/style.css
+++ b/style.css
@@ -9,17 +9,26 @@ Box-sizing
   box-sizing: border-box;
 }
 
+
 /********************************
    Defining all root variables
  *******************************/
 
 :root{
-  --mainColour:;
-  --secondaryColour:;
+  --mainColour: hsl(200, 6%, 10%);
+  --secondaryColour: hsl(60, 100%, 95%);
   --shadowColor:;
   --padding:;
   --margin:;
 }
+
+/*********************
+     Body
+ ********************/
+ 
+ body{
+   background-color: var(--mainColour);
+ }
 
 /***************************
   Header including navigation
@@ -137,7 +146,7 @@ Box-sizing
  }
 
  .brandsContainer h3{
-   
+
  }
 
  .brands{
