--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a{
  **************************/
 
  header{
-
+   
  }
 
 
@@ -77,7 +77,7 @@ a{
  /* logo inside Navigation */
 
  .nav .logo{
-
+   height: 50px;
  }
 
  /****************************
