[AM]: Added the class footer to my footer in both html and css file

--- a/style.css
+++ b/style.css
@@ -181,3 +181,13 @@ a{
  .brands{
 
  }
+
+
+ /******************
+  Footer and icons
+  within styling
+  ******************/
+
+  .footer{
+    display: flex;
+  }
