[AM]:Added background colour to footer and resized company logol

--- a/style.css
+++ b/style.css
@@ -190,4 +190,10 @@ a{
 
   .footer{
     display: flex;
+    height: 30vh;
+    background-color: var(--secondaryColour);
+  }
+
+  .footer .logo{
+    height: 50px;
   }
