--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a{
 :root{
   --mainColour: hsl(200, 6%, 10%);
   --secondaryColour: hsl(60, 100%, 95%);
-  --shadowColor:;
+  --shadowColor: hsl(0, 0%, 3%);
   --padding: 1em;
   --margin: 1em;
 }
@@ -72,6 +72,7 @@ a{
    justify-content: space-between;
    background-color: var(--secondaryColour);
    padding: var(--padding);
+   box-shadow:
  }
 
  /* Navigation items */
