--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a{
    justify-content: space-between;
    background-color: var(--secondaryColour);
    padding: var(--padding);
-   box-shadow:
+   box-shadow: 1px 2px 4px var(--shadowColor);
  }
 
  /* Navigation items */
@@ -212,6 +212,7 @@ a{
     align-items: center;
     height: 30vh;
     background-color: var(--secondaryColour);
+    box-shadow: 1px 2px 4px var(--shadowColor); 
   }
 
   .footer .logo{
