--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ a{
   --directionBtnHoverColor: rgba(245, 245, 240, 0.75);
   --sectionColour: hsl(216, 23%, 9%);
   --headingSize: 2.5rem;
+  --gridGap: 1em;
+  --transitionTime: .3s;
 }
 
 /*********************
@@ -266,24 +268,44 @@ display: none;
    font-size: var(--headingSize);
  }
 
+ .product-img{
+   position: relative;
+   overflow: hidden;
+ }
+
+  /**** Add to cart button styling  *****/
+
+ .bag-btn{
+   padding: var(--btnPadding);
+   font-weight: var(--fontWeight);
+   position: absolute;
+   right: 0;
+   bottom: 20%;
+   transform: translateX(101%);
+   transition: all var(--transitionTime);
+   cursor: pointer;
+ }
+
+ .product-img:hover .bag-btn {
+   transform: translateX(0%);
+ }
+
  /* Men Collection */
 
  .MenCollection{
    grid-area: menSection;
    height: 90vh;
    max-width: 1170px;
+   width: 90vw;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-
+   grid-gap: var(--gridGap);
  }
 
- .product-img{
-   position: relative;
- }
 
  .product-img img{
-   width: 260px;
+   width: 100%;
  }
 
 
@@ -299,7 +321,7 @@ display: none;
  /* Brands section styling */
 
  .brandsContainer{
-
+   margin-top: var(--margin);
  }
 
  .brandsContainer h3{
