--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a{
   --directionBtnHoverColor: rgba(245, 245, 240, 0.75);
   --sectionColour: hsl(216, 23%, 9%);
   --headingSize: 2.5rem;
-  --gridGap: 1em;
+  --gridGap: 1.5em;
   --transitionTime: .3s;
 }
 
@@ -335,9 +335,13 @@ display: none;
 
  .WomenCollection{
    grid-area: womenSection;
-   height: 70vh;
+   height: 90vh;
+   max-width: 1170px;
+   width: 90vw;
+   margin: 0 auto;
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(216px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+   grid-gap: var(--gridGap);
  }
 
  /* Brands section styling */
