--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a{
    font-size: 1.3rem;
    grid-area: header;
    top: 0;
-   position: sticky;
+   /* position: sticky; */
    z-index: 2;
  }
 
@@ -208,6 +208,7 @@ display: none;
   background-color: var(--secondaryColour);
   color: var(--mainColour);
   transition: var(--transition) ease-in-out;
+
 }
 
 /*** Direction buttons inside intro ***/
@@ -240,7 +241,6 @@ display: none;
   border-top-right-radius: 5%;
   border-bottom-right-radius: 5%;
 }
-
 
 
 /* Logo inside of intro styling */
@@ -280,15 +280,24 @@ display: none;
 
 
 .product{
-  background-color: var(--secondaryColour);
+  /* background-color: var(--secondaryColour); */
   padding-bottom: var(--padding);
-  border: 2px solid white;
+  /* border: 2px solid white; */
 }
 
  .product-img{
    position: relative;
    overflow: hidden;
  }
+
+ .product-img img{
+   position: relative;
+   border: 3px solid white;
+   box-shadow: 0px 2px 2px var(--shadowColor), 0 4px 4px var(--shadowColor),
+               0px 8px 8px var(--shadowColor);
+ }
+
+
 
 
   .product-img:hover .bag-btn {
@@ -359,6 +368,7 @@ display: none;
 
  .brandsContainer{
    margin-top: 5%;
+   height: 30vh;
  }
 
  .brandsContainer h3{
