[AM]: Styled the shop buttons in both men and women sections

--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ a{
    border-radius: 3%;
    outline: none;
    cursor: pointer;
-   border: 2px solid var(--secondaryColour);
+   border: 3px solid var(--secondaryColour);
    background: none;
   }
 
@@ -270,6 +270,16 @@ a{
     color: white;
     font-weight: var(--fontWeight);
     font-size: var(--btnFontSize);
+  }
+
+  .shop-btn:hover{
+    background-color: var(--secondaryColour);
+    transition: var(--transition);
+  }
+
+  .shop-btn:hover a{
+    color: black;
+    transition: var(--transition);
   }
 
 
